hack to fix alignment of via link

--- a/dsblog/static/main.css
+++ b/dsblog/static/main.css
@@ -78,10 +78,12 @@ article .post-image {
     margin:15px 0;
 }
 
-article > footer a {
+article footer a {
     text-decoration:none;
     color:#444;
-    vertical-align:middle;
+    vertical-align:middle; /* does not work, TODO remove following hack */
+    position:relative;
+    top:-2px;
 }
 
 article span {
